<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone">

    <FrameLayout
        android:id="@+id/addDevicePicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/picturePreview"
            android:layout_width="match_parent"
            android:layout_height="168dp"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/addPicture"
            android:layout_width="match_parent"
            android:layout_height="168dp"
            android:background="@color/backgroundWhite"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_photo_camera_black_24dp" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:text="@string/text_hint_add_device_picture"
                android:textColor="@color/blue_grey_800" />

        </LinearLayout>
    </FrameLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/spacing_double"
        android:paddingRight="@dimen/spacing_double"
        android:paddingTop="24dp"
        android:text="@string/text_hint_lock_operation"
        android:textSize="24sp" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/spacing_double"
        android:paddingRight="@dimen/spacing_double"
        android:paddingTop="@dimen/spacing_double"
        android:text="@string/text_hint_time"
        android:textSize="12sp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/spacing_double"
        android:paddingRight="@dimen/spacing_double"
        android:paddingTop="@dimen/spacing_normal"
        android:text="2016/03/03 13:14:00"
        android:textSize="16sp" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/spacing_double"
        android:paddingRight="@dimen/spacing_double"
        android:paddingTop="@dimen/spacing_double"
        android:text="@string/text_current_position"
        android:textSize="12sp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="@dimen/spacing_double"
        android:paddingRight="@dimen/spacing_double"
        android:paddingTop="@dimen/spacing_normal"
        android:text="@string/text_hint_get_current_location"
        android:textSize="16sp" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/spacing_double"
        android:paddingRight="@dimen/spacing_double"
        android:paddingTop="@dimen/spacing_double"
        android:text="@string/text_hint_nfc_id"
        android:textSize="12sp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/nfc_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/spacing_double"
        android:paddingLeft="@dimen/spacing_double"
        android:paddingRight="@dimen/spacing_double"
        android:paddingTop="@dimen/spacing_normal"
        android:text="@string/text_hint_get_nfc_tag"
        android:textSize="16sp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_double"
        android:text="@string/text_ok"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />
</LinearLayout>