<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/about_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/spacing_double">

        <ImageView
            android:layout_width="@dimen/size_avatar"
            android:layout_height="@dimen/size_avatar"
            android:layout_gravity="center"
            android:layout_marginTop="48.0dp"
            android:background="@mipmap/ic_launcher_app" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/spacing_middle"
            android:layout_marginTop="@dimen/spacing_normal"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/spacing_normal"
                android:text="@string/app_name"
                android:textColor="@color/text_dark" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/app_version_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_dark" />
        </LinearLayout>

        <!--        <is.arontibo.library.ElasticDownloadView
                    android:id="@+id/elastic_download_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />-->

        <LinearLayout
            android:id="@+id/update_version_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/text_app_new_version_update"
                android:textColor="@color/blue_grey_900" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/app_new_version_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/spacing_normal"
                android:text="@string/text_new_app_version"
                android:textColor="@color/blue_grey_800"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/app_new_version_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_grey_800"
                android:visibility="gone" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/app_introduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/text_app_introduction"
            android:textColor="@color/blue_grey_900" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/app_thanks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/text_thanks"
            android:textColor="@color/blue_grey_900" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/app_about_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/text_app_about_me"
            android:textColor="@color/blue_grey_900" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:text="@string/text_copyright"
            android:textColor="@color/blue_grey_900" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/web_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.v4.widget.ContentLoadingProgressBar
            android:id="@+id/progress"
            style="@style/Base.Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <LinearLayout
            android:id="@+id/web_error_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/monkey_404" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_double"
                android:text="@string/error_404_network"
                android:textColor="@color/blue_grey_600" />
        </LinearLayout>

    </FrameLayout>

</FrameLayout>